@@ -34,6 +34,11 @@ IN DEVELOPMENT
       branch as it makes performance and policy decisions to match the UI
       level command ``push``. (Robert Collins).
 
+    * Allow 'import bzrlib.plugins.NAME' to work when the plugin NAME has not
+      yet been loaded by load_plugins(). This allows plugins to depend on each
+      other for code reuse without requiring users to perform file-renaming
+      gymnastics. (Robert Collins)
+
   BUGFIXES:
 
     * ``bzr annotate`` now uses dotted revnos from the viewpoint of the
